<resources>
    <string name="app_name">project3_cst438</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="story_name">Story Name</string>
    <string name="submit">Submit</string>
    <string name="create_a_story">Create a Story</string>
    <string name="create_new_story">Create new story</string>
    <string name="enter_initial_story">Enter initial story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_story">New Story</string>
    <string name="add_story">Add Story</string>
    <string name="welcome_to_storytime">Welcome to StoryTime!</string>
    <string name="home">Home</string>
    <string name="initial_sentence">Initial sentence</string>
    <string name="story_name1">Story name</string>
    <string name="first_sentence">First sentence</string>
    <string name="view_stories">View Stories</string>
    <string name="profile">Profile</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="retype_password">Re-enter Password</string>
    <string name="create_account">Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="story_goes_here">Story goes here</string>
    <string name="finish_story">Finish Story</string>
    <string name="insert_story_name">Insert Story Name</string>
    <string name="go_back">Go Back</string>
    <string name="back">Back</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="dislikes">dislikes</string>
    <string name="likes">likes</string>
    <string name="status_open">Status: Open</string>
    <string name="add_to_current_story">Add to current story</string>
    <string name="password1">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="username1">Username</string>
    <string name="username2">Username</string>
    <string name="storytime_io">Storytime.io</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="admin">Admin</string>
    <string name="username3">Username</string>
    <string name="password2">Password</string>
    <string name="storytime_io1">Storytime.io</string>
    <string name="todo1">TODO</string>
    <string name="username12">Username</string>
    <string name="login2">Login</string>
</resources>