<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Menu items should have same id as destination fragment -->

    <item
        android:id="@+id/home_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/createStoryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_story"/>

    <item
        android:id="@+id/viewStoriesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/view_stories"/>

    <item
        android:id="@+id/userProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>

<!-- TODO: Add 2 more items for view list of stories and profile-->
</menu>