<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateStoryFragment"
    android:id="@+id/fragment_container_view_new_story"
    >

    <Button
        android:id="@+id/createStoryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initialStoryEditText" />

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/storyNameEditText"
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:layout_marginTop="116dp"
        android:paddingStart="20dp"
        android:paddingEnd="50dp"
        android:textAlignment="textStart"
        android:hint="@string/story_name1"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/initialStoryEditText"
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:layout_marginTop="48dp"
        android:inputType="textMultiLine"
        android:lines="3"
        android:paddingStart="20dp"
        android:paddingEnd="50dp"

        android:textAlignment="textStart"
        android:background="@drawable/rounded_corner"
        android:hint="@string/first_sentence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyNameEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>